--- a/.eslintrc
+++ b/.eslintrc
@@ -7,5 +7,8 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended"
-  ]
+  ],
+  "rules": {
+    "@typescript-eslint/no-unsafe-declaration-merging": "off"
+  }
 }
