--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/dompurify": "^3.0.2",
     "@types/katex": "^0.16.3",
     "@types/prismjs": "^1.26.0",
+    "@types/turndown": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "commitlint": "^17.7.1",
