--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@marktext/muya",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Future markdown editor",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -36,7 +36,6 @@
   "dependencies": {
     "@marktext/file-icons": "^1.0.4",
     "dompurify": "^3.0.5",
-    "element-resize-detector": "^1.2.4",
     "execall": "^3.0.0",
     "fast-diff": "^1.3.0",
     "flowchart.js": "^1.17.1",
@@ -68,6 +67,7 @@
     "@types/dompurify": "^3.0.2",
     "@types/katex": "^0.16.3",
     "@types/plantuml-encoder": "^1.4.0",
+    "@types/popper.js": "^1.11.0",
     "@types/prismjs": "^1.26.0",
     "@types/turndown": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
