--- a/examples/package.json
+++ b/examples/package.json
@@ -9,7 +9,7 @@
   "author": "jocs <ransixi@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@muya/core": "workspace:*",
+    "@muyajs/core": "workspace:*",
     "intl-segmenter-polyfill": "^0.4.4"
   }
 }
