--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -66,6 +66,7 @@
         "plantuml-encoder": "^1.4.0",
         "popper.js": "^1.16.1",
         "prismjs": "^1.29.0",
+        "rxjs": "^7.8.1",
         "snabbdom": "^3.6.2",
         "snabbdom-to-html": "^7.1.0",
         "turndown": "^7.1.3",
