--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "muya",
     "type": "module",
     "version": "0.0.32",
+    "packageManager": "pnpm@9.11.0",
     "description": "Future markdown editor",
     "author": "jocs <ransixi@gmail.com>",
     "license": "MIT",
