--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -50,6 +50,7 @@
         "coverage": "vitest run --coverage"
     },
     "dependencies": {
+        "@floating-ui/dom": "^1.7.4",
         "@marktext/file-icons": "^1.0.4",
         "dompurify": "^3.3.0",
         "execall": "^3.0.0",
@@ -64,7 +65,6 @@
         "ot-json1": "^1.0.2",
         "ot-text-unicode": "^4.0.0",
         "plantuml-encoder": "^1.4.0",
-        "popper.js": "^1.16.1",
         "prismjs": "^1.29.0",
         "rxjs": "^7.8.1",
         "snabbdom": "^3.6.2",
@@ -77,7 +77,6 @@
     "devDependencies": {
         "@types/katex": "^0.16.7",
         "@types/plantuml-encoder": "^1.4.2",
-        "@types/popper.js": "^1.11.0",
         "@types/prismjs": "^1.26.3",
         "@types/turndown": "^5.0.4",
         "@vitest/coverage-istanbul": "^4.0.4",
